--- a/src/Components/Features/Comments/CommentTree/CommentTree.module.scss
+++ b/src/Components/Features/Comments/CommentTree/CommentTree.module.scss
@@ -1,3 +1,5 @@
+@use '../../../../GlobalStyles/Breakpoints.scss' as breakpoints;
+
 .tree_container {
     list-style: none;
     width: 100%;
@@ -18,23 +20,53 @@
     }
 
     &__text_wrapper {
-        p{
+        p {
             margin: 0;
         }
     }
 
     &__bottom {
-      width: 100%;
-      div{
-        p{
-            margin: 0;
-        }
         width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-       
+
+        div {
+            p {
+                margin: 0;
+            }
+
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+    }
+}
+
+.text_wrapper {
+    &__text {
+        color: var(--text-2);
+        padding: 0 0.5em;
+        white-space: break-spaces;
+        word-break: break-word;
+
+        a {
+            text-decoration: none;
+            color: var(--text-link);
+
+            &:hover {
+                color: var(--color-orange-1);
+                transition: all;
+                transition-duration: var(--transition-duration-1);
+            }
+        }
+
+        pre {
+            white-space: break-spaces;
+        }
+
+        p {
+            word-break: break-word;
+        }
     }
 }
 
@@ -55,15 +87,15 @@
     }
 
     &__text {
-       color: var(--text); 
+        color: var(--text);
     }
 
     &__value {
-        color: var(--color-orange-1); 
+        color: var(--color-orange-1);
     }
 }
 
-.button_expand{
+.button_expand {
     cursor: pointer;
     color: var(--text);
     background-color: var(--secondary-background);
@@ -71,4 +103,11 @@
     border: none;
     padding: 0.5em 1.5em;
     border-radius: var(--border-radius-1);
+}
+
+
+@media (max-width: breakpoints.$phone) {
+    .comments_list {
+        padding-left: 0.2em;
+    }
 }
