--- a/src/Components/Layout/Header/Header.module.scss
+++ b/src/Components/Layout/Header/Header.module.scss
@@ -1,5 +1,7 @@
 @use "../../../GlobalStyles/Fonts.scss" as fonts;
 
+@use '../../../GlobalStyles/Breakpoints.scss' as breakpoints;
+
 .header_container {
     display: flex;
     width: 100%;
@@ -39,7 +41,8 @@
         justify-content: flex-end;
         align-items: center;
         gap: 0.5em;
-        p{
+
+        p {
             margin: 0;
         }
     }
@@ -212,4 +215,24 @@
             transform: translate(0);
         }
     }
+}
+
+@media (max-width: breakpoints.$phone) {
+    .header_container {
+        flex-direction: column;
+        gap:0.5em;
+        padding: 0.5em;
+
+        &__logo {
+            display: none;
+        }
+
+        &__user_section {
+            width: 100%;
+            div{
+                width: 100%;
+            }
+        }
+    }
+
 }
