--- a/src/Components/Layout/Layout.module.scss
+++ b/src/Components/Layout/Layout.module.scss
@@ -1,3 +1,5 @@
+@use '../../GlobalStyles/Breakpoints.scss' as breakpoints;
+
 .layout{
     width: 100%;
     min-height: 100vh;
@@ -9,4 +11,13 @@
     main {
         width: 50%;
     }
+}
+
+@media (max-width: breakpoints.$laptop) {
+    .layout{
+        main{
+            width: 95%;
+        }
+    }
+
 }
