--- a/src/Components/UI/Select/DropdownSelect.module.scss
+++ b/src/Components/UI/Select/DropdownSelect.module.scss
@@ -3,24 +3,38 @@
   width: 100%;
   min-width: 10em;
   position: relative;
-  
-  &::after {
-    content: "";
-    position: absolute;
-    right: 1em;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 0.8em;
-    height: 0.5em;
-    background-color: var(--text);
-    clip-path: polygon(100% 0%, 0 0%, 50% 100%);
-    pointer-events: none;
-    z-index: 1;
-    transition: transform 0.2s ease;
+
+  &__select_wrapper {
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      right: 1em;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 0.8em;
+      height: 0.5em;
+      background-color: var(--text);
+      clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+      pointer-events: none;
+      z-index: 1;
+      transition: transform 0.2s ease;
+    }
+
+    &:hover::after {
+      transform: translateY(-50%) scale(1.1);
+    }
   }
-  
-  &:hover::after {
-    transform: translateY(-50%) scale(1.1);
+
+}
+
+.label_wrapper {
+  margin-bottom: 0.5em;
+
+  .label {
+    color: var(--text);
+    text-transform: capitalize;
+    font-weight: 600;
   }
 }
 
@@ -35,7 +49,7 @@ select {
   cursor: pointer;
   line-height: 1.5;
   outline: none;
-  
+
   &::-ms-expand {
     display: none;
   }
@@ -46,24 +60,24 @@ select {
   color: var(--text);
   text-transform: capitalize;
   text-align: left;
-  
+
   transition: all 0.3s ease;
-  
+
   &:hover {
     border-color: var(--color-orange-1);
     background-color: var(--secondary-background);
   }
-  
+
   &:focus {
     border-color: var(--color-orange-1);
     box-shadow: 0 0 0 2px rgba(255, 107, 53, 0.1);
     background-color: var(--secondary-background);
   }
-  
+
   &:active {
     transform: translateY(1px);
   }
-  
+
   &:disabled {
     opacity: 0.6;
     cursor: not-allowed;
@@ -76,12 +90,12 @@ option {
   padding: 0.5em 0.75em;
   background-color: var(--main-background);
   color: var(--text);
-  
+
   &:hover {
     background-color: var(--color-orange-1);
     color: var(--text);
   }
-  
+
   &:disabled {
     opacity: 0.5;
     cursor: not-allowed;
