--- a/src/GlobalStyles/App.scss
+++ b/src/GlobalStyles/App.scss
@@ -4,6 +4,7 @@
   --color-white-1: #FFF;
   --color-white-2: #e7e7e7;
   --color-black: #181818;
+  --color-black-2: #1d1d1d;
   --color-gray-1: #5e5e5e;
   --color-gray-2: #9e9e9e;
   --color-midnight-1: #43444d;
@@ -18,7 +19,8 @@
   --transition-duration-1: 0.3s;
   --glitch-color-1: #353535;
   --glitch-color-2: #5a5a5a;
-
+  --color-blue-1: #4b5988;
+  --color-blue-2: #6d7caf;
 
   font-family: fonts.$font-family-primary;
 }
@@ -30,14 +32,18 @@ body {
 [data-theme="light"] {
   --text: var(--color-black);
   --text-gray: var(--color-gray-2);
-  --main-background: var(--color-smoke-1);
-  --secondary-background: var(--color-smoke-2);
+  --text-2: var(--color-black-2);
+  --text-link: var(--color-blue-1);
+  --main-background: var(--color-smoke-2);
+  --secondary-background: var(--color-smoke-1);
   --border: var(--color-orange-2);
 }
 
 [data-theme="dark"] {
   --text: var(--color-white-2);
   --text-gray: var(--color-gray-2);
+  --text-2: var(--color-white-2);
+  --text-link: var(--color-blue-2);
   --main-background: var(--color-midnight-1);
   --secondary-background: var(--color-midnight-2);
   --border: var(--color-midnight-3);
