--- a/src/Components/Features/Topstories/JobCard/Job.module.scss
+++ b/src/Components/Features/Topstories/JobCard/Job.module.scss
@@ -1,7 +1,7 @@
 @use '../../../../GlobalStyles/Breakpoints.scss' as breakpoints;
 
-
 .job_container {
+    position: relative;
     padding: 1em;
     box-sizing: border-box;
     display: flex;
